--- a/chargeWork/ani2.html
+++ b/chargeWork/ani2.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <h1>Hello This Is me
+    <h1>Hello This Is me</H1>
     <Button>Click Me</Button>
-    </h1>
 </head>
 <body>  
 </body>
